--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Origin client
-CORS_ORIGIN=*
+CORS_ORIGIN=https://hama-dictionary.onrender.com
 
 #server port
 PORT=8000
@@ -39,3 +39,5 @@ FACEBOOK_CLIENT_SECRET=da6c2d741a3473fd8828c1b20ca86813
 CLOUD_NAME=dmdjl8w8l
 CLOUD_API_KEY=396321344445289
 CLOUD_API_SECRET=QdqvXcNCCyQf2AoJ10ukya_LjjU
+
+NODE_ENV=production
